--- a/xyz/templates/xyz/records.html
+++ b/xyz/templates/xyz/records.html
@@ -62,7 +62,7 @@
     <table class="hidden-table">
         <tbody>
             <tr>
-                <td colspan="4" style="text-align: center;">
+                <td colspan="4" style="word-wrap: break-word;">
                     <h2>Accelerometer Information</h2>
                     <p>When the refresh button is clicked, this Web Application will query the attitude information of the GY-80 device, 
                         record it in the database, and return the latest 5 attitude information. </p>
